--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ env:
   global:
     - COMPILE_SDK_VERSION=27 # Same as `compileSdkVersion` in build.gradle
     - EMULATOR_API=22
-    - BUILD_TOOLS_VERSION=27.0.2 # Same as `buildToolsVersion` in build.gradle
-    - ABI=armeabi-v7a # ARM ABI v7a by default
+    - ABI=armeabi-v7a
+    - TAG=google_apis
     - ADB_INSTALL_TIMEOUT=5 # minutes
 
 android:
@@ -28,6 +28,7 @@ android:
     - extra-android-m2repository # Support library
 
     - sys-img-${ABI}-android-${EMULATOR_API} # Emulator image
+    - sys-img-${ABI}-${TAG}-23
 
 notifications:
   email: false
@@ -43,8 +44,8 @@ install:
   - avdmanager --list || true  # Debug / Observation
 
 before_script:
-    #  - echo no | avdmanager create avd -n test -k android-${EMULATOR_API} -f --abi ${ABI} --tag "$TAG"
-  - echo no | android create avd --force -n test -t android-${EMULATOR_API} --abi ${ABI}
+  - echo no | avdmanager create avd -n test -k android-${EMULATOR_API} -f --abi ${ABI} --tag ${TAG}
+  #- echo no | android create avd --force -n test -t android-${EMULATOR_API} --abi ${ABI}
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
