Another travis try

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,8 @@ install:
   - avdmanager --list || true  # Debug / Observation
 
 before_script:
-  - echo no | avdmanager create avd -n test -k android-${EMULATOR_API} -f --abi ${ABI} --tag ${TAG}
   #- echo no | android create avd --force -n test -t android-${EMULATOR_API} --abi ${ABI}
+  - echo no | android create avd --force -n test -t "android-${EMULATOR_API}" --abi ${ABI} --tag ${TAG}
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
