--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,7 @@ android:
     - build-tools-${BUILD_TOOLS_VERSION} # For building
     - android-${COMPILE_SDK_VERSION} # For building
     - android-${EMULATOR_API} # For testing
-
     - extra-android-m2repository # Support library
-
     - sys-img-${ABI}-android-${EMULATOR_API} # Emulator image
     - sys-img-${ABI}-${TAG}-23
 
@@ -34,25 +32,13 @@ notifications:
   email: false
 
 before_install:
-  - chmod +x gradlew
   - yes | sdkmanager "platforms;android-27"
 
-install:
-  - sdkmanager --list || true # Debug / Observation
-  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout;1.0.2" #&> /dev/null
-  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2" #&> /dev/null
-  - avdmanager --list || true  # Debug / Observation
-
 before_script:
-  #- echo no | android create avd --force -n test -t android-${EMULATOR_API} --abi ${ABI}
   - echo no | android create avd --force -n test -t "android-${EMULATOR_API}" --abi ${ABI} --tag ${TAG}
-  - emulator -avd test -no-audio -no-window &
+  - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script:
-  - ./gradlew assembleRelease
-  - ./gradlew :app:createDebugAndroidTestCoverageReport --info --stacktrace
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - ./gradlew connectedAndroidTest
