--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,9 @@
 language: android
 
-before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-
 env:
   global:
     - COMPILE_SDK_VERSION=27 # Same as `compileSdkVersion` in build.gradle
-    - EMULATOR_API=23
+    - EMULATOR_API=26
     - ABI=armeabi-v7a
     - TAG=google_apis
     - ADB_INSTALL_TIMEOUT=5 # minutes
@@ -25,8 +17,7 @@ android:
     - android-${COMPILE_SDK_VERSION} # For building
     - android-${EMULATOR_API} # For testing
     - extra-android-m2repository # Support library
-    - sys-img-${ABI}-android-${EMULATOR_API} # Emulator image
-    - sys-img-${ABI}-${TAG}-23
+    - sys-img-${ABI}-${TAG}-${EMULATOR_API} 
 
 notifications:
   email: false
